--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,12 @@
     <title>{{ title }} - microblog</title>
     {% else %}
     <title>Welcome to microblog</title>
-    {% endif %}  </head>
+    {% endif %}
+  </head>
   <body>
-      <h1>Hello, {{ user.nickname }}!</h1>
+    <h1>Hi, {{ user.nickname }}!</h1>
+    {% for post in posts %}
+    <div><p>{{ post.author.nickname }} says: <b>{{ post.body }}</b></p></div>
+    {% endfor %}
   </body>
 </html>
