save image from local or web and display done

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     {% endif %}
 </head>
 <body>
-<form action="/predict" method="POST">
+<form action="/download" method="POST">
     <fieldset>
         <legend>Image URL</legend>
         <input type="text" name="address"
