--- a/templates/predict.html
+++ b/templates/predict.html
@@ -8,6 +8,6 @@
     {% endif %}
   </head>
   <body>
-    <img src={{ url_address }} width="224" height="224">
+    <img src={{ filename }} width="224" height="224">
   </body>
 </html>
